src/Styles/MainPageStyle.css
* {
    padding: 0;
    margin: 0;
}

header, .dropdown_menu, .container, footer {
    width: 100%;
    max-width: 1200px;
    margin: 0 auto;
}

header, section, .container, footer {
    background-color: aquamarine;
}

header {
    position: relative;
    background-color: rgba(28, 20, 18, 0.8);
    height: 80px;
    width: 100%;
}

h1 {
    color: white;
    position: absolute;
    top: 0;
    line-height: 80px;
    background-image: url(../images/logo.png);
    background-repeat: no-repeat;
    background-position: center;
    background-size: 180%;
    width: 210px;
    text-indent: -9999px;
}

header nav {
    position: absolute;
    right: 0vw;
    top: 0;
    line-height: 80px;
}

header a {
    color: white;
    text-decoration: none;
}

header a:hover {
    text-decoration: underline;
}

nav ul {
    list-style: none;
}

nav li {
    display: inline;
    margin-right: 3vw;
}

.dropdown_menu {
    position: relative;
    background:white;
    top:0;
    width: 100%;
    transition:all 0.5s;
    z-index: 1;
}

.fixed-nav .dropdown_menu {
    position: fixed;
}

.container {
    display: flex;
    padding: 30px 0;
}

main {
    flex: 1;
}

aside {
    width: 400px;
    background-color: #f0f0f0;
}

